# qt_test

./: .gitignore  LICENSE  README.md
src/: CMakeLists.txt  mainwindow.ui
